feat: add authorizations to category endpoints and clean up general category code